<resources>
    <string name="app_name">AppMinimarket</string>

    <string name="btn_iniciar_pantalla">Iniciar Sesion</string>
    <string name="btn_registrar_pantalla">Registrate</string>

    <string name="title_activity_registrar_usuario">RegistrarUsuarioActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Botones -->
    <string name="btn_iniciar_sesion">Iniciar Sesion</string>
    <string name="btn_registrar_usuario">Registrate</string>
    <string name="btn_registrar">Registrar</string>

    <string name="btn_registrar_producto">Registrar Producto</string>
    <string name="btn_nuevo_producto">Nuevo Producto</string>

    <string name="btn_nuevo_oc">Nueva Orden Compra</string>
    <string name="btn_borrar_oc">Borrar</string>

    <!-- Hints -->
    <string name="txt_usuario">Usuario o Correo</string>
    <string name="txt_clave">Clave</string>
    <string name="google">GOOGLE</string>

    <!-- Edit Text -->
    <string name="et_descripcion">Descripción</string>
    <string name="et_producto_precio_compra">Precio Compra</string>
    <string name="et_producto_precio_venta">Precio Venta</string>
    <string name="et_producto_stock">Stock</string>

    <string name="et_orden_compra_fecha_entrega">Fecha Entrega</string>
    <string name="et_orden_compra_consideracion_pago">Consideración Pago</string>
    <string name="et_cantidad">Cantidad</string>
    <string name="et_precio">Precio</string>

    <!-- Text View -->
    <string name="tv_moneda">Moneda</string>

    <!-- Spinners -->
    <string-array name="sp_moneda">
        <item>Selecionar Moneda</item>
        <item>Soles</item>
        <item>Dolares</item>
    </string-array>

    <string-array name="sp_estado">
        <item>Selecionar Estado</item>
        <item>Emitido</item>
        <item>Atendido</item>
        <item>Cancelado</item>
    </string-array>


    <string name="prefs_file">com.example.appminimarket.PREFERENCE_FILE_KEY</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_almacen">AlmacenActivity</string>

</resources>