<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MantenimientoOrdenCompraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/et_descripcion"
            android:textSize="18sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvCantidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/et_cantidad"
            android:textSize="18sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/et_precio"
            android:textSize="18sp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:backgroundTint="#ff3936"
            android:text="@string/btn_borrar_oc"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
    
</androidx.cardview.widget.CardView>