<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MantenimientoOrdenCompraActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-185dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etFechaEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/et_orden_compra_fecha_entrega"
            android:focusable="false"
            android:clickable="true"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etConsideracionPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/et_orden_compra_consideracion_pago"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Spinner
            android:id="@+id/spMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etDesProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/et_descripcion"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/et_cantidad"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/et_precio"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1E90FF"
            android:minHeight="48dp"
            android:text="@string/btn_nuevo_producto"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1E90FF"
            android:text="@string/btn_registrar_producto"
            android:textColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaProductosOC"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            tools:listitem="@layout/lista_producto_oc_item">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btnNuevaOC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1E90FF"
            android:layout_marginTop="10dp"
            android:text="@string/btn_registrar"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>