<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MantenimientoAlmacenActivity">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etDesProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/et_producto_descripcion"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etPrecioCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/et_producto_precio_compra"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            android:inputType="numberDecimal"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etPrecioVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/et_producto_precio_venta"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            android:inputType="numberDecimal"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/et_producto_stock"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            android:inputType="number"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1E90FF"
            android:text="@string/btn_registrar_producto"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>